# cell-generation

./: README.md  generate.py  generate_grid.py  generate_show_steps.py  pyproject.toml  train.py
src/: __init__.py  dataset.py  generate.py  model.py
tests/: test_dataset.py  test_model.py
