[project]
name = "src"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "matplotlib>=3.10.1",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pytest>=8.3.5",
    "torch>=2.6.0",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb[media]>=0.19.8",
]

[tool.setuptools.packages.find]
where=['src']
